Unterstützung von Boolean
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@11613 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: b8943b78ef6434ca95aec44ec031d152d6903e46